# rustbitmap

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: crop.rs  editing_bitmap.rs  processing_bitmap.rs  read_file.rs  resizing_bitmap.rs  saving_file.rs
src/: lib.rs  main.rs
src/bitmap/: bit_count.rs  bit_data.rs  bit_depth.rs  file.rs  file_data.rs  file_header.rs  image.rs  info_header.rs  map.rs  mod.rs  pixel_data.rs  rgb_quad.rs  rgba.rs  util.rs
tests/: common.rs  reading_files.rs
