[package]
name = "bmp-writer"
version = "0.1.0"
authors = ["Alec Divito <divito.alec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustybitmap"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "rbitmap"
path = "src/main.rs"

[dependencies]
